--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -1,4 +1,3 @@
-# .github/workflows/pages.yml
 name: Deploy to GitHub Pages
 
 on:
@@ -25,13 +24,20 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
-          cache: npm
+
+      - name: Enable Corepack (pnpm)
+        run: corepack enable
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 8
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Build static site
-        run: npm run build:pages
+        run: pnpm run build:pages  # package.json 里要有 "build:pages": "next build && next export -o ./out"
 
       - name: Add .nojekyll
         run: touch ./out/.nojekyll
@@ -51,4 +57,3 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-
