--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -1,15 +1,12 @@
-# .github/workflows/nextjs.yml
-name: Deploy to GitHub Pages
-
+# .github/workflows/pages.yml
+name: Deploy Next.js to GitHub Pages
 on:
-  push:
-    branches: [ main ]
-
+  push: { branches: [ main ] }
+  workflow_dispatch:
 permissions:
   contents: read
   pages: write
   id-token: write
-
 concurrency:
   group: "pages"
   cancel-in-progress: true
@@ -18,40 +15,21 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 9
-
-      - name: Install deps
-        run: pnpm install --no-frozen-lockfile
-
-      - name: Build static site (Next export)
-        run: pnpm run build:pages
-
-      - name: Add .nojekyll
-        run: touch ./out/.nojekyll
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: ./out
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with: { node-version: 20, cache: 'npm' }
+      - run: npm ci || npm i
+      - run: npm run build          # ⬅ 会产出 out/
+      - uses: actions/upload-pages-artifact@v3
+        with: { path: ./out }       # ⬅ 必须是 out/
 
   deploy:
+    needs: build
+    runs-on: ubuntu-latest
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
     steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
+      - id: deployment
         uses: actions/deploy-pages@v4
+
