--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -1,12 +1,15 @@
-# .github/workflows/pages.yml
 name: Deploy Next.js to GitHub Pages
+
 on:
-  push: { branches: [ main ] }
+  push:
+    branches: [ main ]
   workflow_dispatch:
+
 permissions:
   contents: read
   pages: write
   id-token: write
+
 concurrency:
   group: "pages"
   cancel-in-progress: true
@@ -16,12 +19,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-node@v4
-        with: { node-version: 20, cache: 'npm' }
-      - run: npm ci || npm i
-      - run: npm run build          # ⬅ 会产出 out/
+        with:
+          node-version: 20
+          cache: pnpm          # ✅ 这里要用 pnpm，CI 才会识别 pnpm-lock.yaml
+
+      - run: corepack enable   # ✅ 开启 pnpm
+      - run: pnpm install --frozen-lockfile
+      - run: pnpm run build    # 要求 package.json 里 "build": "next build && next export"
+
       - uses: actions/upload-pages-artifact@v3
-        with: { path: ./out }       # ⬅ 必须是 out/
+        with:
+          path: ./out
 
   deploy:
     needs: build
@@ -32,4 +42,3 @@ jobs:
     steps:
       - id: deployment
         uses: actions/deploy-pages@v4
-
