--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -3,7 +3,6 @@ name: Deploy Next.js to GitHub Pages
 on:
   push:
     branches: [ main ]
-  workflow_dispatch:
 
 permissions:
   contents: read
@@ -18,22 +17,30 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
-          node-version: 20
-          cache: pnpm          # ✅ 配合 pnpm-lock.yaml 做缓存
+          node-version: 18
 
-      - uses: pnpm/action-setup@v4  # ✅ 安装并放到 PATH
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
         with:
-          version: 9               # 你的 pnpm 版本（8/9都可，和本地保持一致）
-          run_install: true        # 自动执行 pnpm install --frozen-lockfile
+          version: 9
 
-      - name: Build (next build && next export)
-        run: pnpm run build        # 要求 package.json 里是 "build": "next build && next export"
+      - name: Install deps
+        run: pnpm install --no-frozen-lockfile
 
-      - uses: actions/upload-pages-artifact@v3
+      - name: Build static site (Next export)
+        run: pnpm run build:pages
+
+      - name: Add .nojekyll
+        run: touch ./out/.nojekyll
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
           path: ./out
 
@@ -44,5 +51,7 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
-      - id: deployment
+      - name: Deploy to GitHub Pages
+        id: deployment
         uses: actions/deploy-pages@v4
+
