--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -2,7 +2,7 @@ name: Deploy Next.js to GitHub Pages
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   workflow_dispatch:
 
 permissions:
@@ -18,43 +18,35 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      # 先安装 pnpm
-      - uses: pnpm/action-setup@v4
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
-          version: 9
+          node-version: '20'
+          cache: 'pnpm'              # 用 pnpm 缓存
 
-      # 再装 Node，并开启 pnpm 缓存（这一步会调用 pnpm，所以它必须在 pnpm 安装之后）
-      - uses: actions/setup-node@v4
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
         with:
-          node-version: 20
-          cache: 'pnpm'
-          cache-dependency-path: pnpm-lock.yaml
+          run_install: true          # 这里不要再写 version，让它用 package.json 的 packageManager
 
-      - name: Install deps
-        run: pnpm install --frozen-lockfile
+      - name: Build (next build && next export)
+        run: pnpm run build          # 你已经把 next export 合到 build 脚本里了
 
-      # 构建 + 导出静态站点（Next 14）
-      - name: Build & Export
-        run: |
-          pnpm run build
-          pnpm exec next export
-        env:
-          NEXT_TELEMETRY_DISABLED: 1
-
-      # 上传 out 目录作为 Pages 工件
-      - uses: actions/upload-pages-artifact@v3
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          path: out
+          path: ./out                # Next 导出的静态站点目录（output: 'export' 默认就是 out）
 
   deploy:
-    needs: build
     runs-on: ubuntu-latest
+    needs: build
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
-      - id: deployment
+      - name: Deploy to GitHub Pages
+        id: deployment
         uses: actions/deploy-pages@v4
-
