--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@radix-ui/react-toast": "1.2.4",
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
+    "@radix-ui/react-tooltip": "1.1.7",
     "@react-three/drei": "latest",
     "@react-three/fiber": "latest",
     "autoprefixer": "^10.4.20",
@@ -81,3 +82,4 @@
   },
   "packageManager": "pnpm@9.12.0"
 }
+
