--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.7",
-    "@react-three/drei": "9.86.2"",
+    "@react-three/drei": "9.86.2",
     "@react-three/fiber": "8.15.10",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
