--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build && next export",
+    "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start"
@@ -78,8 +78,6 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   },
-  "engines": {
-    "node": "20.x"
-  },
+  "engines": { "node": "20.x" },
   "packageManager": "pnpm@9.12.0"
 }
